<resources>
    <string name="app_name">Memo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">"Settings"</string>
    <string-array name="menu_titles">
        <item>Home</item>
        <item>Categories</item>
        <item>@string/menu_settings</item>
        <item>About</item>
    </string-array>
    <string name="about">Test application created to learn android programming.\n
        <b>Author:</b> Vladimir Mikhalenko</string>
    <string name="action_add">Add</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="action_save">Save</string>
    <string name="description">Description</string>
    <string name="date_time_dialog_title">Select date</string>
    <string name="alert_msg_save">Save changes?</string>
    <string name="alert_btn_no">No</string>
    <string name="alert_btn_save">Save</string>
    <string name="text_view_date">Date</string>
    <string name="action_delete">Delete</string>
    <string name="alert_msg_delete">Delete current note?</string>
    <string name="alert_btn_delete">Delete</string>
    <string name="title_note_edit">Edit note</string>
    <string name="title_note_new">New note</string>
    <string name="title_home">Notes list</string>
    <string name="action_delete_all">Delete all</string>
    <string name="alert_msg_delete_all">Delete all notes?</string>

    <string name="pref_autosave_not_empty_notes_key">auto_save_not_empty_notes</string>
    <string name="pref_last_category_id_key">last_category_id</string>
    <string name="pref_autosave_not_empty_notes_title">Auto save</string>
    <string name="pref_autosave_not_empty_notes_summary">Auto save not empty notes</string>

    <string name="pref_header_global">Global</string>
    <string name="pref_header_global_summary">Global preferences</string>
    <string name="title_dialog_add_new_category">Enter category name</string>
    <string name="title_category_manager">Categories manager</string>
    <string name="action_add_category">Add new category</string>
    <string name="action_delete_all_categories">Delete all</string>
    <string name="alert_msg_delete_all_in_category">Category \'%1$s \' contains %2$d notes. Removing a category will delete all notes in it. Are you sure?</string>
    <string name="pref_sorttype_key">sort_type</string>
    <string name="pref_sorttype_title">Sorting</string>
    <string name="pref_sorttype_summary">Default sorting type in notes list</string>
    <string name="pref_complited_at_the_end_key">completed_at_the_end</string>
    <string name="pref_complited_at_the_end_title">Completed at the end</string>
    <string name="pref_complited_at_the_end_summary">Show completed notes at the end of list</string>
    <string name="pref_sorttype_defvalue">date</string>
    <string name="pref_save_last_category_key">save_last_category</string>
    <string name="pref_save_last_category_title">Save last category</string>
    <string name="pref_save_last_category_summary">Restore last accessed category on startup</string>
    <string name="title_prefs">Settings</string>
    <string name="notify_saving_note_ok">Note saved</string>
    <string name="notify_saving_note_error">Error saving note</string>
    <string name="title_about">About</string>
    <string name="btn_backup">Backup on SD card</string>
    <string name="btn_restore">Restore from SD card</string>
    <string name="menu_about">About</string>
    <string name="menu_catman">Catman</string>
    <string name="menu_home">Home</string>
    <string name="pref_backup_title">Backup</string>
    <string name="pref_backup_summary">Backup notes on SD card</string>
    <string name="pref_backup_key">pref_backup_key</string>
    <string name="pref_restore_key">pref_restore_key</string>
    <string name="pref_restore_title">Restore</string>
    <string name="pref_restore_summary">Restore notes from SD card</string>
</resources>
