<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.mikhalenko.memo.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/menu_catman"
            android:icon="@drawable/ic_catman"
            android:title="@string/menu_catman"/>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about"/>
    </group>

</menu>