<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.mikhalenko.memo.EditItemFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_margin="@dimen/small_margin"
        android:id="@+id/textView3"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/edit_title"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_margin="@dimen/small_margin"
        android:id="@+id/textView"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_description"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_above="@+id/textView2"
        android:gravity="top|left"
        android:autoLink="all"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_date"

        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_title_material"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/btnDate"
        android:layout_alignTop="@+id/btnDate"
        android:id="@+id/textView2"/>

    <Button
        android:layout_width="wrap_content"
        android:gravity="center_vertical|right"
        android:layout_height="wrap_content"
        android:text="Date button"
        android:id="@+id/btnDate"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"/>

</RelativeLayout>
